# orso_tools

./: .gitignore  AUTHORS.rst  HISTORY.rst  README.rst  build_exe.spec  orso_viewer.py  osb.py  osb.spec  requirements.txt  setup.cfg
.github/workflows/: build.yml
examples/: refnx_lipid_leaflets.ort  test_example.ort
orso_sample_builder/: __main__.py  main_window.py  main_window.ui  model_editor.py  ui_main_window.py
orso_tools/: mpl_canvas.py  sample_viewer.py
orso_viewer/: __main__.py  main_window.py  main_window.ui  mpl_canvas.py  sample_viewer.py  ui_main_window.py
