[metadata]
name = orsopy
version = attr: orso_tools.__version__
author = ORSO contributors (see AUTHORS.rst)
author_email = artur.glavic@psi.ch
description = Tools for reflectometry from the Open Reflectometry Standards Organization (ORSO)
long_description = file: README.rst
url = https://github.com/reflectivity/orso_tools
license = MIT
license-file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.9
packages = find:
install_requires =
    orsopy>=1.2.0
    matplotlib

[options.entry_points]
gui_scripts =
    orso_gui = orso_viewer
