[metadata]
name = orso_tools
version = attr: orso_tools.__version__
author = ORSO contributors (see AUTHORS.rst)
author_email = artur.glavic@psi.ch
description = Tools for reflectometry from the Open Reflectometry Standards Organization (ORSO)
long_description = file: README.rst
url = https://github.com/reflectivity/orso_tools
license = MIT
license-file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.9
packages = find:
install_requires =
    PySide6
    numpy
    pyyaml
    orsopy
    matplotlib
    refnx

[options.entry_points]
gui_scripts =
    orso_viewer = orso_viewer.__main__:main
    osb = orso_sample_builder.__main__:main
